--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
 
 spring:
   application:
@@ -9,7 +9,7 @@ spring:
       routes:
         # Auth Service (Public - No JWT Required)
         - id: auth-service
-          uri: http://localhost:8081
+          uri: ${AUTH_SERVICE_URL:http://localhost:8081}
           predicates:
             - Path=/api/auth/**
           filters:
@@ -17,7 +17,7 @@ spring:
 
         # Menu Service
         - id: menu-service
-          uri: http://localhost:8082
+          uri: ${MENU_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/menu/**
           filters:
@@ -25,7 +25,7 @@ spring:
 
         # Menu Service - Admin Menu
         - id: admin-menu-service
-          uri: http://localhost:8082
+          uri: ${MENU_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/admin/menu/**
           filters:
@@ -33,7 +33,7 @@ spring:
 
         # Category Service - Public (No Auth)
         - id: category-service-public
-          uri: http://localhost:8082
+          uri: ${MENU_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/categories/**
           filters:
@@ -41,7 +41,7 @@ spring:
 
         # Category Service - Admin
         - id: category-service-admin
-          uri: http://localhost:8082
+          uri: ${MENU_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/admin/categories/**
           filters:
@@ -49,7 +49,7 @@ spring:
 
         # Media Service (Menu Service)
         - id: media-service
-          uri: http://localhost:8082
+          uri: ${MENU_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/media/**
           filters:
@@ -57,19 +57,19 @@ spring:
 
         # Order Service
         - id: order-service
-          uri: http://localhost:8083
+          uri: ${ORDER_SERVICE_URL:http://localhost:8083}
           predicates:
             - Path=/api/orders/**
 
         # Analytics Service
         - id: analytics-service
-          uri: http://localhost:8084
+          uri: ${ANALYTICS_SERVICE_URL:http://localhost:8084}
           predicates:
             - Path=/api/analytics/**
 
         # KDS Service
         - id: kds-service
-          uri: http://localhost:8085
+          uri: ${KDS_SERVICE_URL:http://localhost:8085}
           predicates:
             - Path=/api/kds/**
 
@@ -77,9 +77,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins:
-              - "http://localhost:3000"
-              - "http://localhost:3001"
+            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001}
             allowedMethods:
               - GET
               - POST
@@ -97,14 +95,32 @@ spring:
 
 # JWT Configuration
 jwt:
-  secret: 7d31f0ead336068cac57f475bdb722e69bb452d2
+  secret: ${JWT_SECRET:7d31f0ead336068cac57f475bdb722e69bb452d2}
 
 # Public paths that don't require JWT (comma-separated)
 gateway:
-  public-paths: /api/auth/**,/api/categories/**,/api/menu/**,/api/media/**,/api/orders/active
+  public-paths: ${PUBLIC_PATHS:/api/auth/**,/api/categories/**,/api/menu/**,/api/media/**,/api/orders/active}
 
 # Logging
 logging:
   level:
-    org.springframework.cloud.gateway: DEBUG
-    com.example.api_gateway: DEBUG
+    root: ${LOG_LEVEL:INFO}
+    org.springframework.cloud.gateway: ${LOG_LEVEL:DEBUG}
+    com.example.api_gateway: ${LOG_LEVEL:DEBUG}
+
+# Spring Boot Actuator for Health Checks
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
+      probes:
+        enabled: true
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
