--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -36,10 +36,10 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }} \
-                       -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest .
+          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }} -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest .
           docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest
+
 
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
