--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -36,9 +36,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }} -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest .
-          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
-          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest
+          docker build -t ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }} -t ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest .
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:latest
 
 
       - name: Deploy to Azure Container Apps
@@ -46,4 +46,4 @@ jobs:
         with:
           containerAppName: ${{ secrets.CONTAINER_APP_NAME }}
           resourceGroup: ${{ secrets.RESOURCE_GROUP }}
-          imageToDeploy: ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
+          imageToDeploy: ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
