fix/application.yml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -112,7 +112,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001}
+            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
             allowedOriginPatterns:
               - "https://*.vercel.app"
             allowedMethods:
@@ -127,6 +127,9 @@ spring:
             exposedHeaders:
               - X-Correlation-Id
               - X-Service-Name
+              - X-User-Id
+              - X-Table-Id
+              - X-Role
               - Authorization
             allowCredentials: true
             maxAge: 3600
@@ -137,7 +140,7 @@ jwt:
 
 # Public paths that don't require JWT (comma-separated)
 gateway:
-  public-paths: ${PUBLIC_PATHS:/api/auth/**,/api/categories/**,/api/menu/**,/api/media/**,/api/orders/active,/actuator/**,/api/admin/analytics/openapi.json,/api/waiter/health,/api/kitchen/health,/api/kitchen/debug/status,/api/waiter/debug/kafka,/payments/**}
+  public-paths: ${PUBLIC_PATHS:/api/auth/login,/api/auth/register,/api/auth/refresh,/api/categories/**,/api/menu/**,/api/media/**,/api/orders/active,/actuator/**,/api/admin/analytics/openapi.json,/api/waiter/health,/api/kitchen/health,/api/kitchen/debug/status,/api/waiter/debug/kafka,/payments/**}
 
 # Logging
 logging:
