--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,9 +7,10 @@ spring:
   cloud:
     gateway:
       routes:
+
         # Auth Service (Public & Profile)
         - id: auth-service
-          uri: ${AUTH_SERVICE_URL:http://localhost:8081}
+          uri: ${AUTH_SERVICE_URL:https://ishanka1102-auth-service.hf.space}
           predicates:
             - Path=/api/auth/**, /api/profile/**
           # filters:
@@ -108,13 +109,22 @@ spring:
           filters:
             - StripPrefix=0
 
-      # Global CORS Configuration
+
+      
+      
+
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
+            allowedOrigins:
+              - "http://localhost:3000"
+              - "http://localhost:5005"
+              - "http://localhost:3001"
+              - "https://no-18-restaurant-ms.vercel.app"
+              - "https://ishanka1102-auth-service.hf.space"
             allowedOriginPatterns:
               - "https://*.vercel.app"
+              - "https://*.hf.space"
             allowedMethods:
               - GET
               - POST
@@ -133,6 +143,7 @@ spring:
               - Authorization
             allowCredentials: true
             maxAge: 3600
+
 
 # JWT Configuration
 jwt:
