--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -116,12 +116,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins:
-              - "http://localhost:3000"
-              - "http://localhost:5005"
-              - "http://localhost:3001"
-              - "https://no-18-restaurant-ms.vercel.app"
-              - "https://ishanka1102-auth-service.hf.space"
+            allowedOrigins: ${CORS_ALLOWED_ORIGINS:https://no-18-restaurant-ms.vercel.app}
             allowedOriginPatterns:
               - "https://*.vercel.app"
               - "https://*.hf.space"
