--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -112,26 +112,17 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
+            # allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
             allowedOriginPatterns:
-              - "https://*.vercel.app"
+              - "*"
             allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - PATCH
-              - OPTIONS
+              - "*"
             allowedHeaders:
               - "*"
             exposedHeaders:
-              - X-Correlation-Id
-              - X-Service-Name
-              - X-User-Id
-              - X-Table-Id
-              - X-Role
+              - "*"
               - Authorization
-            allowCredentials: true
+            allowCredentials: false
             maxAge: 3600
 
 # JWT Configuration
