--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -118,9 +118,9 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
+            # allowedOrigins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5005,http://localhost:3001,https://no-18-restaurant-ms.vercel.app}
             allowedOriginPatterns:
-              - "https://*.vercel.app"
+              - "*"
             allowedMethods:
               - "*"
             allowedHeaders:
